--- a/app/views/cadastro/index.phtml
+++ b/app/views/cadastro/index.phtml
@@ -8,29 +8,30 @@
                 <?php echo (isset($this->menu) ? $this->menu : ''); ?>
             </div>
             <div class="panel-body">
+            <?php echo (isset($this->alert) ? $this->alert : ''); ?>
                 <form action="<?php echo BASE; ?>cadastro/cadastrar/" class="form-horizontal" method="post">
                   <div class="form-group">
                     <label for="name" class="col-sm-3 control-label">Nome:</label>
                     <div class="col-sm-8">
-                      <input type="text" name="name" class="form-control" id="name" placeholder="Nome Completo">
+                      <input type="text" name="name" class="form-control" id="name" placeholder="Nome Completo" required>
                     </div>
                   </div>
                   <div class="form-group">
                     <label for="email" class="col-sm-3 control-label">E-mail:</label>
                     <div class="col-sm-8">
-                      <input type="text" name="email" class="form-control" id="email" placeholder="seuemail@site.com.br">
+                      <input type="text" name="email" class="form-control" id="email" placeholder="seuemail@site.com.br" required>
                     </div>
                   </div>
                   <div class="form-group">
                     <label for="username" class="col-sm-3 control-label">Usuário</label>
                     <div class="col-sm-8">
-                      <input type="text" name="username" class="form-control" id="username" placeholder="username">
+                      <input type="text" name="username" class="form-control" id="username" placeholder="username" required>
                     </div>
                   </div>
                   <div class="form-group">
                     <label for="password" class="col-sm-3 control-label">Senha:</label>
                     <div class="col-sm-8">
-                      <input type="password" name="password" class="form-control" id="password" placeholder="Sua senha">
+                      <input type="password" name="password" class="form-control" id="password" placeholder="Sua senha" required>
                     </div>
                   </div>
                   <div class="form-group">
